home/homebox/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: homebox
  name: homebox
spec:
  ports:
    - port: 80
      targetPort: web
  selector:
    app.kubernetes.io/name: homebox
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  labels:
    app.kubernetes.io/name: homebox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homebox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homebox
    spec:
      automountServiceAccountToken: false
      containers:
        - name: homebox
          image: sysadminsmedia/homebox:0.19.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7745
              name: web
          volumeMounts:
            - mountPath: /data
              name: homebox
      volumes:
        - name: homebox
          persistentVolumeClaim:
            claimName: homebox
